--- a/scrapping/scrapping.ipynb
+++ b/scrapping/scrapping.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,20 +50,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting openpyxl\n",
-      "  Downloading openpyxl-3.1.2-py2.py3-none-any.whl (249 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m250.0/250.0 kB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hCollecting et-xmlfile (from openpyxl)\n",
-      "  Downloading et_xmlfile-1.1.0-py3-none-any.whl (4.7 kB)\n",
-      "Installing collected packages: et-xmlfile, openpyxl\n",
-      "Successfully installed et-xmlfile-1.1.0 openpyxl-3.1.2\n",
+      "Requirement already satisfied: openpyxl in /usr/local/python/3.10.8/lib/python3.10/site-packages (3.1.2)\n",
+      "Requirement already satisfied: et-xmlfile in /usr/local/python/3.10.8/lib/python3.10/site-packages (from openpyxl) (1.1.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -74,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
